--- a/circle.yml
+++ b/circle.yml
@@ -92,24 +92,21 @@ jobs:
           name: Init submodules
           command: git submodule update --init --recursive
       - run:
-          name: Generate Maven credentials
+          name: Generate Bintray credentials
           shell: /bin/bash -euo pipefail
           command: |
-            if [ -n "${PUBLISH_NEXUS_USERNAME}" ]; then
-              aws s3 cp s3://mapbox/android/signing-credentials/secring.gpg secring.gpg
-              echo "NEXUS_USERNAME=$PUBLISH_NEXUS_USERNAME
-              NEXUS_PASSWORD=$PUBLISH_NEXUS_PASSWORD
-              signing.keyId=$SIGNING_KEYID
-              signing.password=$SIGNING_PASSWORD
-              signing.secretKeyRingFile=../secring.gpg" >> gradle.properties
+            if [ -n "${BINTRAY_USER}" ]; then
+              echo "BINTRAY_USER=$BINTRAY_USER
+              BINTRAY_API_KEY=$BINTRAY_API_KEY
+              GPG_PASSPHRASE=$GPG_PASSPHRASE"
             fi
       - run:
           name: Build Plugins SDK
           command: make build-release
       - deploy:
-          name: Publish Plugins SDK To Maven Central
+          name: Publish Plugins SDK to Bintray
           command: |
-            if [ -n "${PUBLISH_NEXUS_USERNAME}" ]; then
+            if [ -n "${BINTRAY_USER}" ]; then
               if [ "${CIRCLE_BRANCH}" == "master" ]; then
                 make publish
               fi
