--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -32,7 +32,11 @@
       checkstyle: '8.10.1',
       gradle    : '3.4.0',
       kotlin    : '1.3.20',
-      dokka     : '0.9.17'
+      dokka     : '0.9.17',
+      dependencyGraph: '0.4.0',
+      bintray    : '1.8.4',
+      androidPublish  : '3.6.2',
+      artifactory: '4.9.3'
   ]
 
   dependenciesList = [
@@ -92,6 +96,9 @@
       gradle    : "com.android.tools.build:gradle:${pluginVersion.gradle}",
       checkstyle: "com.puppycrawl.tools:checkstyle:${pluginVersion.checkstyle}",
       kotlin    : "org.jetbrains.kotlin:kotlin-gradle-plugin:${pluginVersion.kotlin}",
-      dokka     : "org.jetbrains.dokka:dokka-android-gradle-plugin:${pluginVersion.dokka}"
+      dokka     : "org.jetbrains.dokka:dokka-android-gradle-plugin:${pluginVersion.dokka}",
+      bintray   : "com.jfrog.bintray.gradle:gradle-bintray-plugin:${pluginVersion.bintray}",
+      androidPublishPlugin  : "digital.wup:android-maven-publish:${pluginVersion.androidPublish}",
+      artifactory: "org.jfrog.buildinfo:build-info-extractor-gradle:${pluginVersion.artifactory}"
   ]
 }
