--- a/plugin-annotation/build.gradle
+++ b/plugin-annotation/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 }
 
 apply from: "${rootDir}/gradle/javadoc.gradle"
-apply from: "${rootDir}/gradle/publish.gradle"
 apply from: "${rootDir}/gradle/checkstyle.gradle"
 apply from: "${rootDir}/gradle/nitpick.gradle"
+apply from: "${rootDir}/gradle/artifact-settings.gradle"
+apply from: "${rootDir}/gradle/gradle-bintray.gradle"
