--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,18 @@
         android:value=".activity.FeatureOverviewActivity"/>
     </activity>
     <activity
+        android:name=".activity.places.PickerAutocompleteCombinedActivity"
+        android:description="@string/description_place_picker_autocomplete_combo"
+        android:label="@string/title_place_picker_autocomplete_combo"
+        android:theme="@style/AppTheme.NoActionBar">
+      <meta-data
+          android:name="@string/category"
+          android:value="@string/category_places"/>
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value=".activity.FeatureOverviewActivity"/>
+    </activity>
+    <activity
       android:name=".activity.places.AutocompleteFragmentActivity"
       android:description="@string/description_autocomplete_fragment"
       android:label="@string/title_places_autocomplete_fragment"
