added setup to scalebar module

--- a/plugin-scalebar/build.gradle
+++ b/plugin-scalebar/build.gradle
@@ -30,5 +30,6 @@ dependencies {
 }
 
 apply from: "${rootDir}/gradle/javadoc.gradle"
-apply from: "${rootDir}/gradle/publish.gradle"
 apply from: "${rootDir}/gradle/checkstyle.gradle"
+apply from: "${rootDir}/gradle/artifact-settings.gradle"
+apply from: "${rootDir}/gradle/gradle-bintray.gradle" 
