--- a/plugin-scalebar/build.gradle
+++ b/plugin-scalebar/build.gradle
@@ -32,4 +32,5 @@ dependencies {
 apply from: "${rootDir}/gradle/javadoc.gradle"
 apply from: "${rootDir}/gradle/checkstyle.gradle"
 apply from: "${rootDir}/gradle/artifact-settings.gradle"
-apply from: "${rootDir}/gradle/gradle-bintray.gradle" 
+apply from: "${rootDir}/gradle/gradle-bintray.gradle"
+apply from: "${rootDir}/gradle/gradle-bintray-generic.gradle"
