--- a/gradle/gradle-bintray.gradle
+++ b/gradle/gradle-bintray.gradle
@@ -15,11 +15,7 @@ publishing {
             afterEvaluate {
                 artifact("$buildDir/outputs/aar/${project.name}-release.aar")
                 artifact(androidSourcesJar)
-//                artifact(androidJavadocsJar)
-
-                artifact (androidJavadocsJar) {
-                    classifier = 'javadoc'
-                }
+                artifact(androidJavadocsJar)
             }
 
             pom.withXml {
@@ -89,15 +85,11 @@ artifactory {
 
 task androidSourcesJar(type: Jar) {
     classifier "sources"
+    extension "aar"
     from android.sourceSets.main.java.srcDirs
 }
 
 task androidJavadocs(type: Javadoc) {
-    /*source = android.sourceSets.main.java.sourceFiles
-    classpath = files(android.bootClasspath)
-    failOnError = false*/
-
-
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
     android.libraryVariants.all { variant ->
@@ -119,10 +111,10 @@ tasks.withType(Javadoc) {
     options.addStringOption('charset', 'UTF-8')
 }
 
-artifacts {
+/*artifacts {
     archives androidSourcesJar
     archives androidJavadocsJar
-}
+}*/
 
 afterEvaluate { project ->
     android.libraryVariants.all { variant ->
